Added stacks to workspaces

--- a/src/embed.agc.in
+++ b/src/embed.agc.in
@@ -20,6 +20,87 @@ KEY		ERASE
 
 {data}
 
+# END OF ERASABLE MEMORY
+		SETLOC 4000
+
+# ENTRY POINT AT POWER-UP OR GOJAM
+GOJAM
+		INHINT                # DISABLE INTERRUPTS FOR A MOMENT.
+
+# SET UP THE TIME3 INTERRUPT, T3RUPT.  TIME3 IS A 15-BIT
+# REGISTER AT ADDRESS 026, WHICH AUTOMATICALLY INCREMENTS EVERY
+# 10 MS, AND A T3RUPT INTERRUPT OCCURS WHEN THE TIMER
+# OVERFLOWS.  THUS IF IT IS INITIALLY LOADED WITH 037774,
+# AND OVERFLOWS WHEN IT HITS 040000, THEN IT WILL
+# INTERRUPT AFTER 40 MS.
+
+		CA	O37774
+		TS	TIME3
+		TCF	STARTUP		# GO TO YOUR "REAL" CODE.
+
+		RESUME	# T6RUPT
+		NOOP
+		NOOP
+		NOOP
+
+		RESUME	# T5RUPT
+		NOOP
+		NOOP
+		NOOP
+
+TIMER3		DXCH	ARUPT	# T3RUPT
+		EXTEND		# BACK UP A, L, AND Q REGISTERS
+		QXCH      QRUPT
+		TCF       T3RUPT
+
+		RESUME		# T4RUPT
+		NOOP
+		NOOP
+		NOOP
+
+		EXTEND		# KEYRUPT1
+		DIM KEY
+		RESUME		# KEYRUPT1
+		NOOP
+
+		RESUME		# KEYRUPT2
+		NOOP
+		NOOP
+		NOOP
+
+		RESUME		# UPRUPT
+		NOOP
+		NOOP
+		NOOP
+
+		RESUME		# DOWNRUPT
+		NOOP
+		NOOP
+		NOOP
+
+		RESUME		# RADAR RUPT
+		NOOP
+		NOOP
+		NOOP
+
+		RESUME		# RUPT10
+		NOOP
+		NOOP
+		NOOP
+
+# THE INTERRUPT-SERVICE ROUTINE FOR THE TIME3 INTERRUPT EVERY 40 MS. 
+T3RUPT		CAF	O37774	# SCHEDULE ANOTHER TIME3 INTERRUPT IN 40 MS.
+		TS	TIME3
+
+		CS	NEWJOB
+		EXTEND
+		DIM CLOCK
+
+		DXCH	ARUPT	# RESTORE A, L, AND Q, AND EXIT THE INTERRUPT
+		EXTEND
+		QXCH	QRUPT
+		RESUME
+
 STARTUP		TC	{entrypoint}
 
 EXIT		CS	NEWJOB	# TICKLE THE NIGHT WATCHMAN
