Nuked repo, starting with a fresh parser

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,10 @@ name = "moonshot"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[build-dependencies]
+lalrpop = "0.22.0"
 
 [dependencies]
+anyhow = "1.0.93"
 indoc = "1.0"
+lalrpop-util = { version = "0.22.0", features = ["lexer"] }
