Scaffolding the compiler a bit

--- a/src/embed.agc.in
+++ b/src/embed.agc.in
@@ -12,31 +12,38 @@ TIME3      	=	26
 CYL		=	22
 RHCP		=	42
 
-NEWJOB		=	67	# LOCATION CHECK BY NIGHT WATCHMAN
+# LOCATION CHECK BY NIGHT WATCHMAN
+NEWJOB		=	67
 		SETLOC	68
 
 CLOCK		ERASE
 KEY		ERASE
 
+# ***************** BEGIN CODE GENERATION *****************
+
 {data}
 
-# END OF ERASABLE MEMORY
+# ****************** END CODE GENERATION ******************
+
+		# END OF ERASABLE MEMORY
 		SETLOC 4000
 
-# ENTRY POINT AT POWER-UP OR GOJAM
-GOJAM
-		INHINT                # DISABLE INTERRUPTS FOR A MOMENT.
+		# ENTRY POINT AT POWER-UP OR GOJAM
+		# DISABLE INTERRUPTS FOR A MOMENT.
+GOJAM		INHINT
 
-# SET UP THE TIME3 INTERRUPT, T3RUPT.  TIME3 IS A 15-BIT
-# REGISTER AT ADDRESS 026, WHICH AUTOMATICALLY INCREMENTS EVERY
-# 10 MS, AND A T3RUPT INTERRUPT OCCURS WHEN THE TIMER
-# OVERFLOWS.  THUS IF IT IS INITIALLY LOADED WITH 037774,
-# AND OVERFLOWS WHEN IT HITS 040000, THEN IT WILL
-# INTERRUPT AFTER 40 MS.
+		# SET UP THE TIME3 INTERRUPT, T3RUPT.  TIME3 IS A 15-BIT
+		# REGISTER AT ADDRESS 026, WHICH AUTOMATICALLY INCREMENTS EVERY
+		# 10 MS, AND A T3RUPT INTERRUPT OCCURS WHEN THE TIMER
+		# OVERFLOWS.  THUS IF IT IS INITIALLY LOADED WITH 037774,
+		# AND OVERFLOWS WHEN IT HITS 040000, THEN IT WILL
+		# INTERRUPT AFTER 40 MS.
 
 		CA	O37774
 		TS	TIME3
-		TCF	STARTUP		# GO TO YOUR "REAL" CODE.
+
+		# GO TO YOUR "REAL" CODE.
+		TCF	STARTUP
 
 		RESUME	# T6RUPT
 		NOOP
@@ -50,8 +57,8 @@ GOJAM
 
 TIMER3		DXCH	ARUPT	# T3RUPT
 		EXTEND		# BACK UP A, L, AND Q REGISTERS
-		QXCH      QRUPT
-		TCF       T3RUPT
+		QXCH	QRUPT
+		TCF	T3RUPT
 
 		RESUME		# T4RUPT
 		NOOP
@@ -88,13 +95,13 @@ TIMER3		DXCH	ARUPT	# T3RUPT
 		NOOP
 		NOOP
 
-# THE INTERRUPT-SERVICE ROUTINE FOR THE TIME3 INTERRUPT EVERY 40 MS. 
+		# THE INTERRUPT-SERVICE ROUTINE FOR THE TIME3 INTERRUPT EVERY 40 MS. 
 T3RUPT		CAF	O37774	# SCHEDULE ANOTHER TIME3 INTERRUPT IN 40 MS.
 		TS	TIME3
 
 		CS	NEWJOB
 		EXTEND
-		DIM CLOCK
+		DIM	CLOCK
 
 		DXCH	ARUPT	# RESTORE A, L, AND Q, AND EXIT THE INTERRUPT
 		EXTEND
@@ -106,7 +113,13 @@ STARTUP		TC	{entrypoint}
 EXIT		CS	NEWJOB	# TICKLE THE NIGHT WATCHMAN
 		TCF	EXIT
 
-# DEFINE ANY CONSTANTS THAT ARE NEEDED
+# ADDITIONAL CONSTANTS
 O37774		OCT	37774
 
+# ***************** BEGIN CODE GENERATION *****************
+
 {code}
+
+# ****************** END CODE GENERATION ******************
+
+		TC	EXIT
